Build: Fix Windows cross-compilation compatibility issues
- Fix __cpuid incompatibility in metrics.cpp for MinGW
  MinGW uses Windows-style __cpuid(int[4], int) instead of GCC's
  5-argument version. Added MinGW-specific branch to handle this.

- Fix DMI reader platform-specific compilation
  DmiReader_unix.cpp uses Unix-only headers (sys/mman.h) that don't
  exist on Windows. Modified Makefile.am to conditionally compile
  DmiReader_win.cpp for Windows and DmiReader_unix.cpp for other platforms.

- Fix libc++ linker errors for Windows builds
  Added -lc++ and -lc++abi to MinGW LDFLAGS to properly link the C++
  standard library when using clang with libc++.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -385,7 +385,6 @@ libbitcoin_server_a_SOURCES = \
   hw/dmi/DmiBoard.cpp \
   hw/dmi/DmiMemory.cpp \
   hw/dmi/DmiReader.cpp \
-  hw/dmi/DmiReader_unix.cpp \
   hw/dmi/DmiTools.cpp \
   miner.cpp \
   net.cpp \
@@ -452,6 +451,12 @@ libbitcoin_wallet_a_SOURCES = \
   wallet/walletdb.cpp \
   $(BITCOIN_CORE_H) \
   $(LIBZCASH_H)
+
+if TARGET_WINDOWS
+libbitcoin_server_a_SOURCES += hw/dmi/DmiReader_win.cpp
+else
+libbitcoin_server_a_SOURCES += hw/dmi/DmiReader_unix.cpp
+endif
 
 # crypto primitives library
 crypto_libbitcoin_crypto_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_CONFIG_INCLUDES)
