--- a/depends/config.site.in
+++ b/depends/config.site.in
@@ -35,6 +35,8 @@ CPPFLAGS="-I$depends_prefix/include/ $CPPFLAGS"
 
 if test x@host_os@ = xfreebsd; then
   LDFLAGS="-L$depends_prefix/lib $LDFLAGS -static-libstdc++ -lcxxrt"
+elif test x@host_os@ = xmingw32; then
+  LDFLAGS="-L$depends_prefix/lib $LDFLAGS -static-libstdc++"
 else
   LDFLAGS="-L$depends_prefix/lib $LDFLAGS -static-libstdc++ -lc++abi"
 fi
