Build: Add pthread library for Windows threading support
Add -lpthread to LDFLAGS for Windows builds to provide std::call_once
and other C++ threading primitives. MinGW requires explicit pthread
linking to resolve symbols like std::__once_callable and std::__once_call
used by the C++ standard library's thread support.

--- a/depends/config.site.in
+++ b/depends/config.site.in
@@ -36,7 +36,7 @@ CPPFLAGS="-I$depends_prefix/include/ $CPPFLAGS"
 if test x@host_os@ = xfreebsd; then
   LDFLAGS="-L$depends_prefix/lib $LDFLAGS -static-libstdc++ -lcxxrt"
 elif test x@host_os@ = xmingw32; then
-  LDFLAGS="-L$depends_prefix/lib $LDFLAGS -static-libstdc++"
+  LDFLAGS="-L$depends_prefix/lib $LDFLAGS -static-libstdc++ -lpthread"
 else
   LDFLAGS="-L$depends_prefix/lib $LDFLAGS -static-libstdc++ -lc++abi"
 fi
