--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -749,6 +749,7 @@ junocashd_LDADD = \
   $(LIBBITCOIN_CRYPTO) \
   $(LIBRUSTZCASH) \
   $(LIBZCASH) \
+  $(LIBRUSTZCASH) \
   $(LIBLEVELDB) \
   $(LIBLEVELDB_SSE42) \
   $(LIBMEMENV) \
@@ -782,6 +783,7 @@ junocash_cli_LDADD = \
   $(EVENT_LIBS) \
   $(LIBRUSTZCASH) \
   $(LIBZCASH) \
+  $(LIBRUSTZCASH) \
   $(LIBBITCOIN_CRYPTO) \
   $(LIBSECP256K1) \
   $(LIBZCASH_LIBS)
@@ -808,6 +810,7 @@ junocash_tx_LDADD = \
   $(LIBSECP256K1) \
   $(LIBRUSTZCASH) \
   $(LIBZCASH) \
+  $(LIBRUSTZCASH) \
   $(LIBBITCOIN_CRYPTO) \
   $(LIBZCASH_LIBS)
 
