--- a/src/Makefile.bench.include
+++ b/src/Makefile.bench.include
@@ -41,7 +41,8 @@ bench_bench_bitcoin_LDADD = \
   $(LIBSECP256K1) \
   $(LIBUNIVALUE) \
   $(LIBRUSTZCASH) \
-  $(LIBZCASH)
+  $(LIBZCASH) \
+  $(LIBRUSTZCASH)
 
 if ENABLE_ZMQ
 bench_bench_bitcoin_LDADD += $(LIBBITCOIN_ZMQ) $(ZMQ_LIBS)
