build: Add LIBCXXBRIDGE after second LIBRUSTZCASH to resolve FFI symbols
The cxxbridge-generated C++ code in LIBCXXBRIDGE contains the symbol
definitions for FFI functions like cxxbridge1$RustDataStream$read_u8,
cxxbridge1$CAutoFile$write_u8, etc. that the Rust code calls.

On Windows/MinGW, the linker needs access to LIBCXXBRIDGE on the second
pass through the circular dependency chain to resolve all symbols.

This completes the fix for Windows cross-compilation linking errors.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -750,6 +750,7 @@ junocashd_LDADD = \
   $(LIBRUSTZCASH) \
   $(LIBZCASH) \
   $(LIBRUSTZCASH) \
+  $(LIBCXXBRIDGE) \
   $(LIBLEVELDB) \
   $(LIBLEVELDB_SSE42) \
   $(LIBMEMENV) \
@@ -784,6 +785,7 @@ junocash_cli_LDADD = \
   $(LIBRUSTZCASH) \
   $(LIBZCASH) \
   $(LIBRUSTZCASH) \
+  $(LIBCXXBRIDGE) \
   $(LIBBITCOIN_CRYPTO) \
   $(LIBSECP256K1) \
   $(LIBZCASH_LIBS)
@@ -811,6 +813,7 @@ junocash_tx_LDADD = \
   $(LIBRUSTZCASH) \
   $(LIBZCASH) \
   $(LIBRUSTZCASH) \
+  $(LIBCXXBRIDGE) \
   $(LIBBITCOIN_CRYPTO) \
   $(LIBZCASH_LIBS)
 
