build: Add dependent libraries after circular dependency resolution
After resolving circular dependencies with duplicate LIBRUSTZCASH and
LIBCXXBRIDGE, we need to also include the libraries they depend on:
- LIBBITCOIN_CRYPTO (for memory_cleanse)
- LIBSECP256K1 (for secp256k1_* functions)
- LIBBITCOIN_COMMON, LIBBITCOIN_SCRIPT, LIBBITCOIN_CONSENSUS (for key.cpp, pubkey.cpp)

The Windows/MinGW linker requires all transitive dependencies to be
available during the second pass through the circular dependency chain.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -751,6 +751,7 @@ junocashd_LDADD = \
   $(LIBZCASH) \
   $(LIBRUSTZCASH) \
   $(LIBCXXBRIDGE) \
+  $(LIBBITCOIN_CRYPTO) \
   $(LIBLEVELDB) \
   $(LIBLEVELDB_SSE42) \
   $(LIBMEMENV) \
@@ -786,6 +787,9 @@ junocash_cli_LDADD = \
   $(LIBZCASH) \
   $(LIBRUSTZCASH) \
   $(LIBCXXBRIDGE) \
+  $(LIBBITCOIN_COMMON) \
+  $(LIBBITCOIN_SCRIPT) \
+  $(LIBBITCOIN_CONSENSUS) \
   $(LIBBITCOIN_CRYPTO) \
   $(LIBSECP256K1) \
   $(LIBZCASH_LIBS)
@@ -814,7 +818,9 @@ junocash_tx_LDADD = \
   $(LIBZCASH) \
   $(LIBRUSTZCASH) \
   $(LIBCXXBRIDGE) \
+  $(LIBBITCOIN_SCRIPT) \
   $(LIBBITCOIN_CRYPTO) \
+  $(LIBSECP256K1) \
   $(LIBZCASH_LIBS)
 
 junocash_tx_LDADD += $(BOOST_LIBS)
