build: Move LIBBITCOIN_COMMON/SCRIPT/CONSENSUS after secp256k1 in link order
The Windows/MinGW linker processes libraries left-to-right and only
resolves currently undefined symbols. Libraries like LIBBITCOIN_COMMON
(which contains key.cpp and pubkey.cpp) have references to secp256k1
functions, but if they appear early in the link order, those references
cannot be resolved because secp256k1 hasn't been seen yet.

The solution is to place LIBBITCOIN_COMMON, LIBBITCOIN_SCRIPT, and
LIBBITCOIN_CONSENSUS AFTER the circular dependency resolution chain:

  LIBRUSTZCASH -> LIBZCASH -> LIBRUSTZCASH -> LIBCXXBRIDGE ->
  LIBBITCOIN_CRYPTO -> LIBSECP256K1 -> LIBBITCOIN_COMMON/SCRIPT/CONSENSUS

This ensures all dependencies are available when needed.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -739,13 +739,10 @@ endif
 junocashd_LDADD = \
   $(LIBBITCOIN_SERVER) \
   $(LIBBITCOIN_WALLET) \
-  $(LIBBITCOIN_COMMON) \
   $(LIBCXXBRIDGE) \
   $(LIBUNIVALUE) \
   $(LIBBITCOIN_UTIL) \
   $(LIBBITCOIN_ZMQ) \
-  $(LIBBITCOIN_CONSENSUS) \
-  $(LIBBITCOIN_SCRIPT) \
   $(LIBBITCOIN_CRYPTO) \
   $(LIBRUSTZCASH) \
   $(LIBZCASH) \
@@ -755,7 +752,10 @@ junocashd_LDADD = \
   $(LIBLEVELDB) \
   $(LIBLEVELDB_SSE42) \
   $(LIBMEMENV) \
-  $(LIBSECP256K1)
+  $(LIBSECP256K1) \
+  $(LIBBITCOIN_COMMON) \
+  $(LIBBITCOIN_CONSENSUS) \
+  $(LIBBITCOIN_SCRIPT)
 
 junocashd_LDADD += \
   $(BOOST_LIBS) \
@@ -787,11 +787,11 @@ junocash_cli_LDADD = \
   $(LIBZCASH) \
   $(LIBRUSTZCASH) \
   $(LIBCXXBRIDGE) \
+  $(LIBBITCOIN_CRYPTO) \
+  $(LIBSECP256K1) \
   $(LIBBITCOIN_COMMON) \
   $(LIBBITCOIN_SCRIPT) \
   $(LIBBITCOIN_CONSENSUS) \
-  $(LIBBITCOIN_CRYPTO) \
-  $(LIBSECP256K1) \
   $(LIBZCASH_LIBS)
 #
 
@@ -808,19 +808,17 @@ endif
 # FIXME: Is libzcash needed for junocash_tx?
 junocash_tx_LDADD = \
   $(LIBUNIVALUE) \
-  $(LIBBITCOIN_COMMON) \
   $(LIBBITCOIN_UTIL) \
-  $(LIBBITCOIN_CONSENSUS) \
-  $(LIBBITCOIN_SCRIPT) \
   $(LIBCXXBRIDGE) \
-  $(LIBSECP256K1) \
   $(LIBRUSTZCASH) \
   $(LIBZCASH) \
   $(LIBRUSTZCASH) \
   $(LIBCXXBRIDGE) \
-  $(LIBBITCOIN_SCRIPT) \
   $(LIBBITCOIN_CRYPTO) \
   $(LIBSECP256K1) \
+  $(LIBBITCOIN_COMMON) \
+  $(LIBBITCOIN_CONSENSUS) \
+  $(LIBBITCOIN_SCRIPT) \
   $(LIBZCASH_LIBS)
 
 junocash_tx_LDADD += $(BOOST_LIBS)
