build: Add LIBZCASH and LIBBITCOIN_UTIL at end to complete dependency chain
These libraries contain symbols that are referenced by LIBBITCOIN_COMMON,
LIBBITCOIN_SCRIPT, and LIBBITCOIN_CONSENSUS, which in turn reference
symbols from the Rust/C++ circular dependency chain.

The Windows/MinGW linker needs all these libraries at the end to fully
resolve the complete dependency graph.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -755,7 +755,9 @@ junocashd_LDADD = \
   $(LIBSECP256K1) \
   $(LIBBITCOIN_COMMON) \
   $(LIBBITCOIN_CONSENSUS) \
-  $(LIBBITCOIN_SCRIPT)
+  $(LIBBITCOIN_SCRIPT) \
+  $(LIBZCASH) \
+  $(LIBBITCOIN_UTIL)
 
 junocashd_LDADD += \
   $(BOOST_LIBS) \
@@ -792,6 +794,8 @@ junocash_cli_LDADD = \
   $(LIBBITCOIN_COMMON) \
   $(LIBBITCOIN_SCRIPT) \
   $(LIBBITCOIN_CONSENSUS) \
+  $(LIBZCASH) \
+  $(LIBBITCOIN_UTIL) \
   $(LIBZCASH_LIBS)
 #
 
@@ -819,6 +823,8 @@ junocash_tx_LDADD = \
   $(LIBBITCOIN_COMMON) \
   $(LIBBITCOIN_CONSENSUS) \
   $(LIBBITCOIN_SCRIPT) \
+  $(LIBZCASH) \
+  $(LIBBITCOIN_UTIL) \
   $(LIBZCASH_LIBS)
 
 junocash_tx_LDADD += $(BOOST_LIBS)
