--- a/src/Makefile.bench.include
+++ b/src/Makefile.bench.include
@@ -44,7 +44,9 @@ bench_bench_bitcoin_LDADD = \
   $(LIBSECP256K1) \
   $(LIBBITCOIN_COMMON) \
   $(LIBBITCOIN_CONSENSUS) \
-  $(LIBBITCOIN_SCRIPT)
+  $(LIBBITCOIN_SCRIPT) \
+  $(LIBZCASH) \
+  $(LIBBITCOIN_UTIL)
 
 if ENABLE_ZMQ
 bench_bench_bitcoin_LDADD += $(LIBBITCOIN_ZMQ) $(ZMQ_LIBS)
