Fix: Linker errors on MinGW by adjusting Makefile linking
Address undefined reference errors occurring during cross-compilation
for Windows (x86_64-w64-mingw32).

Specifically:
- Defined  to resolve  undefined references,
  which are common when statically linking secp256k1 on Windows.
- Reorganized  variables in  and
   for , ,
  , and . This involved removing duplicate
  library entries and ensuring a correct link order, where dependent
  libraries appear before their dependencies. This should resolve
  undefined references to symbols from  (e.g., ,
  , , ) and .

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,7 +8,7 @@ DIST_SUBDIRS = secp256k1 univalue
 
 AM_LDFLAGS = $(PTHREAD_CFLAGS) $(LIBTOOL_LDFLAGS) $(HARDENED_LDFLAGS) $(GPROF_LDFLAGS) $(SANITIZER_LDFLAGS)
 AM_CXXFLAGS = $(DEBUG_CXXFLAGS) $(HARDENED_CXXFLAGS) $(ERROR_CXXFLAGS) $(GPROF_CXXFLAGS) $(SANITIZER_CXXFLAGS) $(WARNING_CXXFLAGS)
-AM_CPPFLAGS = $(DEBUG_CPPFLAGS) $(HARDENED_CPPFLAGS)
+AM_CPPFLAGS = $(DEBUG_CPPFLAGS) $(HARDENED_CPPFLAGS) -DSECP256K1_STATIC
 EXTRA_LIBRARIES =
 
 BITCOIN_CONFIG_INCLUDES=-I$(builddir)/config
@@ -739,26 +739,20 @@ endif
 junocashd_LDADD = \
   $(LIBBITCOIN_SERVER) \
   $(LIBBITCOIN_WALLET) \
-  $(LIBCXXBRIDGE) \
+  $(LIBBITCOIN_COMMON) \
   $(LIBUNIVALUE) \
   $(LIBBITCOIN_UTIL) \
   $(LIBBITCOIN_ZMQ) \
+  $(LIBBITCOIN_CONSENSUS) \
   $(LIBBITCOIN_CRYPTO) \
-  $(LIBRUSTZCASH) \
+  $(LIBBITCOIN_SCRIPT) \
   $(LIBZCASH) \
   $(LIBRUSTZCASH) \
   $(LIBCXXBRIDGE) \
-  $(LIBBITCOIN_CRYPTO) \
   $(LIBLEVELDB) \
   $(LIBLEVELDB_SSE42) \
   $(LIBMEMENV) \
-  $(LIBSECP256K1) \
-  $(LIBBITCOIN_COMMON) \
-  $(LIBBITCOIN_CONSENSUS) \
-  $(LIBBITCOIN_SCRIPT) \
-  $(LIBZCASH) \
-  $(LIBBITCOIN_UTIL) \
-  $(LIBRUSTZCASH)
+  $(LIBSECP256K1)
 
 junocashd_LDADD += \
   $(BOOST_LIBS) \
@@ -783,22 +777,17 @@ junocash_cli_LDADD = \
   $(LIBBITCOIN_CLI) \
   $(LIBUNIVALUE) \
   $(LIBBITCOIN_UTIL) \
-  $(LIBCXXBRIDGE) \
-  $(BOOST_LIBS) \
-  $(EVENT_LIBS) \
-  $(LIBRUSTZCASH) \
+  $(LIBBITCOIN_COMMON) \
+  $(LIBBITCOIN_CONSENSUS) \
+  $(LIBBITCOIN_SCRIPT) \
   $(LIBZCASH) \
   $(LIBRUSTZCASH) \
   $(LIBCXXBRIDGE) \
   $(LIBBITCOIN_CRYPTO) \
   $(LIBSECP256K1) \
-  $(LIBBITCOIN_COMMON) \
-  $(LIBBITCOIN_SCRIPT) \
-  $(LIBBITCOIN_CONSENSUS) \
-  $(LIBZCASH) \
-  $(LIBBITCOIN_UTIL) \
-  $(LIBRUSTZCASH) \
-  $(LIBZCASH_LIBS)
+  $(LIBZCASH_LIBS) \
+  $(BOOST_LIBS) \
+  $(EVENT_LIBS)
 #
 
 # zcash-tx binary #
@@ -814,20 +803,15 @@ endif
 # FIXME: Is libzcash needed for junocash_tx?
 junocash_tx_LDADD = \
   $(LIBUNIVALUE) \
+  $(LIBBITCOIN_COMMON) \
   $(LIBBITCOIN_UTIL) \
-  $(LIBCXXBRIDGE) \
-  $(LIBRUSTZCASH) \
+  $(LIBBITCOIN_CONSENSUS) \
+  $(LIBBITCOIN_SCRIPT) \
   $(LIBZCASH) \
   $(LIBRUSTZCASH) \
   $(LIBCXXBRIDGE) \
   $(LIBBITCOIN_CRYPTO) \
   $(LIBSECP256K1) \
-  $(LIBBITCOIN_COMMON) \
-  $(LIBBITCOIN_CONSENSUS) \
-  $(LIBBITCOIN_SCRIPT) \
-  $(LIBZCASH) \
-  $(LIBBITCOIN_UTIL) \
-  $(LIBRUSTZCASH) \
   $(LIBZCASH_LIBS)
 
 junocash_tx_LDADD += $(BOOST_LIBS)
