Fix: Adjust Makefile linking order for MinGW compilation
Further refined the linking order in Makefiles to resolve remaining
undefined reference errors during cross-compilation for Windows
(x86_64-w64-mingw32).

Specifically:
- Reordered libraries in  variables for ,
  , , and .
- Ensured that libraries depending on symbols from other libraries are
  listed before their dependencies, adhering to static library linking
  conventions. This addresses undefined references for ,
  , and  functions.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -739,20 +739,20 @@ endif
 junocashd_LDADD = \
   $(LIBBITCOIN_SERVER) \
   $(LIBBITCOIN_WALLET) \
-  $(LIBBITCOIN_COMMON) \
-  $(LIBUNIVALUE) \
-  $(LIBBITCOIN_UTIL) \
-  $(LIBBITCOIN_ZMQ) \
   $(LIBBITCOIN_CONSENSUS) \
-  $(LIBBITCOIN_CRYPTO) \
   $(LIBBITCOIN_SCRIPT) \
-  $(LIBZCASH) \
-  $(LIBRUSTZCASH) \
   $(LIBCXXBRIDGE) \
+  $(LIBZCASH) \
+  $(LIBBITCOIN_UTIL) \
+  $(LIBBITCOIN_COMMON) \
+  $(LIBRUSTZCASH) \
+  $(LIBBITCOIN_CRYPTO) \
+  $(LIBSECP256K1) \
+  $(LIBUNIVALUE) \
+  $(LIBBITCOIN_ZMQ) \
   $(LIBLEVELDB) \
   $(LIBLEVELDB_SSE42) \
-  $(LIBMEMENV) \
-  $(LIBSECP256K1)
+  $(LIBMEMENV)
 
 junocashd_LDADD += \
   $(BOOST_LIBS) \
@@ -775,16 +775,16 @@ endif
 
 junocash_cli_LDADD = \
   $(LIBBITCOIN_CLI) \
-  $(LIBUNIVALUE) \
-  $(LIBBITCOIN_UTIL) \
-  $(LIBBITCOIN_COMMON) \
   $(LIBBITCOIN_CONSENSUS) \
   $(LIBBITCOIN_SCRIPT) \
-  $(LIBZCASH) \
-  $(LIBRUSTZCASH) \
   $(LIBCXXBRIDGE) \
+  $(LIBZCASH) \
+  $(LIBBITCOIN_UTIL) \
+  $(LIBBITCOIN_COMMON) \
+  $(LIBRUSTZCASH) \
   $(LIBBITCOIN_CRYPTO) \
   $(LIBSECP256K1) \
+  $(LIBUNIVALUE) \
   $(LIBZCASH_LIBS) \
   $(BOOST_LIBS) \
   $(EVENT_LIBS)
@@ -802,16 +802,16 @@ endif
 
 # FIXME: Is libzcash needed for junocash_tx?
 junocash_tx_LDADD = \
-  $(LIBUNIVALUE) \
   $(LIBBITCOIN_COMMON) \
-  $(LIBBITCOIN_UTIL) \
   $(LIBBITCOIN_CONSENSUS) \
   $(LIBBITCOIN_SCRIPT) \
-  $(LIBZCASH) \
-  $(LIBRUSTZCASH) \
   $(LIBCXXBRIDGE) \
+  $(LIBZCASH) \
+  $(LIBBITCOIN_UTIL) \
+  $(LIBRUSTZCASH) \
   $(LIBBITCOIN_CRYPTO) \
   $(LIBSECP256K1) \
+  $(LIBUNIVALUE) \
   $(LIBZCASH_LIBS)
 
 junocash_tx_LDADD += $(BOOST_LIBS)
