Fix: Add bcrypt library to RUST_LIBS for MinGW
Modified  to include  in  when
cross-compiling for Windows (MinGW). This resolves the
undefined reference errors, as the  crate on Windows
requires linking against the  library for its functionality.

--- a/configure.ac
+++ b/configure.ac
@@ -1122,7 +1122,7 @@ fi
 RUST_LIBS=""
 case $host in
   *mingw*)
-    RUST_LIBS="$RUST_LIBS -luserenv"
+    RUST_LIBS="$RUST_LIBS -luserenv -lbcrypt"
     ;;
   *)
     RUST_LIBS="$RUST_LIBS -ldl"
