--- a/src/Makefile.bench.include
+++ b/src/Makefile.bench.include
@@ -28,15 +28,17 @@ bench_bench_bitcoin_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(EVENT_CLFAGS
 bench_bench_bitcoin_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
 bench_bench_bitcoin_LDADD = \
   $(LIBBITCOIN_SERVER) \
-  $(LIBBITCOIN_CONSENSUS) \
-  $(LIBBITCOIN_SCRIPT) \
-  $(LIBCXXBRIDGE) \
-  $(LIBZCASH) \
-  $(LIBBITCOIN_UTIL) \
-  $(LIBBITCOIN_COMMON) \
-  $(LIBRUSTZCASH) \
-  $(LIBBITCOIN_CRYPTO) \
-  $(LIBSECP256K1) \
+  -Wl,--start-group \
+    $(LIBBITCOIN_CONSENSUS) \
+    $(LIBBITCOIN_SCRIPT) \
+    $(LIBCXXBRIDGE) \
+    $(LIBZCASH) \
+    $(LIBBITCOIN_UTIL) \
+    $(LIBBITCOIN_COMMON) \
+    $(LIBRUSTZCASH) \
+    $(LIBBITCOIN_CRYPTO) \
+    $(LIBSECP256K1) \
+  -Wl,--end-group \
   $(LIBUNIVALUE) \
   $(LIBLEVELDB) \
   $(LIBLEVELDB_SSE42) \
