Fix: Move --start-group flags from LDADD to LDFLAGS in src/Makefile.am and src/Makefile.bench.include
Relocated --start-group/--end-group linker flags from junocash_tx_LDADD and
bench_bench_bitcoin_LDADD to their respective LDFLAGS variables to comply with
Automake conventions and resolve libtool warnings.

--- a/src/Makefile.bench.include
+++ b/src/Makefile.bench.include
@@ -28,21 +28,21 @@ bench_bench_bitcoin_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(EVENT_CLFAGS
 bench_bench_bitcoin_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
 bench_bench_bitcoin_LDADD = \
   $(LIBBITCOIN_SERVER) \
-  -Wl,--start-group \
-    $(LIBBITCOIN_CONSENSUS) \
-    $(LIBBITCOIN_SCRIPT) \
-    $(LIBCXXBRIDGE) \
-    $(LIBZCASH) \
-    $(LIBBITCOIN_UTIL) \
-    $(LIBBITCOIN_COMMON) \
-    $(LIBRUSTZCASH) \
-    $(LIBBITCOIN_CRYPTO) \
-    $(LIBSECP256K1) \
-  -Wl,--end-group \
+  $(LIBBITCOIN_CONSENSUS) \
+  $(LIBBITCOIN_SCRIPT) \
+  $(LIBCXXBRIDGE) \
+  $(LIBZCASH) \
+  $(LIBBITCOIN_UTIL) \
+  $(LIBBITCOIN_COMMON) \
+  $(LIBRUSTZCASH) \
+  $(LIBBITCOIN_CRYPTO) \
+  $(LIBSECP256K1) \
   $(LIBUNIVALUE) \
   $(LIBLEVELDB) \
   $(LIBLEVELDB_SSE42) \
   $(LIBMEMENV)
+
+bench_bench_bitcoin_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) -Wl,--start-group $(LIBBITCOIN_CONSENSUS) $(LIBBITCOIN_SCRIPT) $(LIBCXXBRIDGE) $(LIBZCASH) $(LIBBITCOIN_UTIL) $(LIBBITCOIN_COMMON) $(LIBRUSTZCASH) $(LIBBITCOIN_CRYPTO) $(LIBSECP256K1) -Wl,--end-group
 
 if ENABLE_ZMQ
 bench_bench_bitcoin_LDADD += $(LIBBITCOIN_ZMQ) $(ZMQ_LIBS)
