--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -739,22 +739,22 @@ endif
 junocashd_LDADD = \
   $(LIBBITCOIN_SERVER) \
   $(LIBBITCOIN_WALLET) \
-  -Wl,--start-group \
-    $(LIBBITCOIN_CONSENSUS) \
-    $(LIBBITCOIN_SCRIPT) \
-    $(LIBCXXBRIDGE) \
-    $(LIBZCASH) \
-    $(LIBBITCOIN_UTIL) \
-    $(LIBBITCOIN_COMMON) \
-    $(LIBRUSTZCASH) \
-    $(LIBBITCOIN_CRYPTO) \
-    $(LIBSECP256K1) \
-  -Wl,--end-group \
+  $(LIBBITCOIN_CONSENSUS) \
+  $(LIBBITCOIN_SCRIPT) \
+  $(LIBCXXBRIDGE) \
+  $(LIBZCASH) \
+  $(LIBBITCOIN_UTIL) \
+  $(LIBBITCOIN_COMMON) \
+  $(LIBRUSTZCASH) \
+  $(LIBBITCOIN_CRYPTO) \
+  $(LIBSECP256K1) \
   $(LIBUNIVALUE) \
   $(LIBBITCOIN_ZMQ) \
   $(LIBLEVELDB) \
   $(LIBLEVELDB_SSE42) \
   $(LIBMEMENV)
+
+junocashd_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) -Wl,--start-group $(LIBBITCOIN_CONSENSUS) $(LIBBITCOIN_SCRIPT) $(LIBCXXBRIDGE) $(LIBZCASH) $(LIBBITCOIN_UTIL) $(LIBBITCOIN_COMMON) $(LIBRUSTZCASH) $(LIBBITCOIN_CRYPTO) $(LIBSECP256K1) -Wl,--end-group
 
 junocashd_LDADD += \
   $(BOOST_LIBS) \
@@ -777,21 +777,21 @@ endif
 
 junocash_cli_LDADD = \
   $(LIBBITCOIN_CLI) \
-  -Wl,--start-group \
-    $(LIBBITCOIN_CONSENSUS) \
-    $(LIBBITCOIN_SCRIPT) \
-    $(LIBCXXBRIDGE) \
-    $(LIBZCASH) \
-    $(LIBBITCOIN_UTIL) \
-    $(LIBBITCOIN_COMMON) \
-    $(LIBRUSTZCASH) \
-    $(LIBBITCOIN_CRYPTO) \
-    $(LIBSECP256K1) \
-  -Wl,--end-group \
+  $(LIBBITCOIN_CONSENSUS) \
+  $(LIBBITCOIN_SCRIPT) \
+  $(LIBCXXBRIDGE) \
+  $(LIBZCASH) \
+  $(LIBBITCOIN_UTIL) \
+  $(LIBBITCOIN_COMMON) \
+  $(LIBRUSTZCASH) \
+  $(LIBBITCOIN_CRYPTO) \
+  $(LIBSECP256K1) \
   $(LIBUNIVALUE) \
   $(LIBZCASH_LIBS) \
   $(BOOST_LIBS) \
   $(EVENT_LIBS)
+
+junocash_cli_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) -Wl,--start-group $(LIBBITCOIN_CONSENSUS) $(LIBBITCOIN_SCRIPT) $(LIBCXXBRIDGE) $(LIBZCASH) $(LIBBITCOIN_UTIL) $(LIBBITCOIN_COMMON) $(LIBRUSTZCASH) $(LIBBITCOIN_CRYPTO) $(LIBSECP256K1) -Wl,--end-group
 #
 
 # zcash-tx binary #
@@ -806,19 +806,19 @@ endif
 
 # FIXME: Is libzcash needed for junocash_tx?
 junocash_tx_LDADD = \
-  -Wl,--start-group \
-    $(LIBBITCOIN_COMMON) \
-    $(LIBBITCOIN_CONSENSUS) \
-    $(LIBBITCOIN_SCRIPT) \
-    $(LIBCXXBRIDGE) \
-    $(LIBZCASH) \
-    $(LIBBITCOIN_UTIL) \
-    $(LIBRUSTZCASH) \
-    $(LIBBITCOIN_CRYPTO) \
-    $(LIBSECP256K1) \
-  -Wl,--end-group \
+  $(LIBBITCOIN_COMMON) \
+  $(LIBBITCOIN_CONSENSUS) \
+  $(LIBBITCOIN_SCRIPT) \
+  $(LIBCXXBRIDGE) \
+  $(LIBZCASH) \
+  $(LIBBITCOIN_UTIL) \
+  $(LIBRUSTZCASH) \
+  $(LIBBITCOIN_CRYPTO) \
+  $(LIBSECP256K1) \
   $(LIBUNIVALUE) \
   $(LIBZCASH_LIBS)
+
+junocash_tx_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) -Wl,--start-group $(LIBBITCOIN_COMMON) $(LIBBITCOIN_CONSENSUS) $(LIBBITCOIN_SCRIPT) $(LIBCXXBRIDGE) $(LIBZCASH) $(LIBBITCOIN_UTIL) $(LIBRUSTZCASH) $(LIBBITCOIN_CRYPTO) $(LIBSECP256K1) -Wl,--end-group
 
 junocash_tx_LDADD += $(BOOST_LIBS)
 #
