Fix: Set inherited_linker_flags and dependency_libs in librustzcash.la generation
Modified src/Makefile.am to populate inherited_linker_flags with $(LIBZCASH_LIBS)
and dependency_libs with $(LIBCXXBRIDGE) in the librustzcash.la file, ensuring
libtool correctly resolves transitive dependencies for librustzcash during MinGW
cross-compilation.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -169,7 +169,8 @@ $(LIBRUSTZCASH): cargo-build-lib
 	$(AM_V_at)echo "dlname=''" >>$@
 	$(AM_V_at)echo "library_names=''" >>$@
 	$(AM_V_at)echo "old_library='../$(basename $(@F)).a'" >>$@
-	$(AM_V_at)echo "inherited_linker_flags=''" >>$@
+	$(AM_V_at)echo "inherited_linker_flags='$(LIBZCASH_LIBS)'" >>$@
+	$(AM_V_at)echo "dependency_libs=' $(LIBCXXBRIDGE) '" >>$@
 	$(AM_V_at)echo "installed=no" >>$@
 	$(AM_V_at)echo "shouldnotlink=no" >>$@
 
