Build: Fix depends build system variable references
- Fix config.site.in: Handle undefined ac_site_file gracefully
- Fix funcs.mk: Rename _unpacked variable to _extracted to match actual usage

These fixes resolve issues in the depends build system where variable
references were incorrect or could fail when ac_site_file is undefined.

--- a/depends/config.site.in
+++ b/depends/config.site.in
@@ -1,4 +1,10 @@
-depends_prefix="`dirname ${ac_site_file}`/.."
+# depends_prefix="`dirname ${ac_site_file}`/.."
+
+if test -n "${ac_site_file}"; then
+  depends_prefix="`dirname "${ac_site_file}"`/.."
+else
+  depends_prefix="${PWD}/depends"
+fi
 
 cross_compiling=maybe
 host_alias=@HOST@
