Fix: Make -lbcrypt linker flag conditional for Linux builds
The build was failing on Linux due to the unconditional inclusion of the -lbcrypt linker flag, which is a Windows-specific library.

This change modifies src/Makefile.am and src/Makefile.bench.include to use a conditional LIBBCRYPT variable that only adds -lbcrypt when building for Windows.

Additionally, this commit includes updates to depends/packages/*.mk files and the addition of depends/packages/libunwind.mk.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,6 +6,12 @@
 
 DIST_SUBDIRS = secp256k1 univalue
 
+if TARGET_WINDOWS
+LIBBCRYPT = -lbcrypt
+else
+LIBBCRYPT =
+endif
+
 AM_LDFLAGS = $(PTHREAD_CFLAGS) $(LIBTOOL_LDFLAGS) $(HARDENED_LDFLAGS) $(GPROF_LDFLAGS) $(SANITIZER_LDFLAGS)
 AM_CXXFLAGS = $(DEBUG_CXXFLAGS) $(HARDENED_CXXFLAGS) $(ERROR_CXXFLAGS) $(GPROF_CXXFLAGS) $(SANITIZER_CXXFLAGS) $(WARNING_CXXFLAGS)
 AM_CPPFLAGS = $(DEBUG_CPPFLAGS) $(HARDENED_CPPFLAGS) -DSECP256K1_STATIC
@@ -755,7 +761,7 @@ junocashd_LDADD = \
   $(LIBLEVELDB_SSE42) \
   $(LIBMEMENV)
 
-junocashd_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) -Wl,--start-group $(LIBBITCOIN_CONSENSUS) $(LIBBITCOIN_SCRIPT) $(LIBCXXBRIDGE) $(LIBZCASH) $(LIBBITCOIN_UTIL) $(LIBBITCOIN_COMMON) $(LIBRUSTZCASH) $(LIBBITCOIN_CRYPTO) $(LIBSECP256K1) -Wl,--end-group -lbcrypt -Wl,--allow-multiple-definition
+junocashd_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) -Wl,--start-group $(LIBBITCOIN_CONSENSUS) $(LIBBITCOIN_SCRIPT) $(LIBCXXBRIDGE) $(LIBZCASH) $(LIBBITCOIN_UTIL) $(LIBBITCOIN_COMMON) $(LIBRUSTZCASH) $(LIBBITCOIN_CRYPTO) $(LIBSECP256K1) -Wl,--end-group $(LIBBCRYPT) -Wl,--allow-multiple-definition
 
 junocashd_LDADD += \
   $(BOOST_LIBS) \
@@ -792,7 +798,7 @@ junocash_cli_LDADD = \
   $(BOOST_LIBS) \
   $(EVENT_LIBS)
 
-junocash_cli_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) -Wl,--start-group $(LIBBITCOIN_CONSENSUS) $(LIBBITCOIN_SCRIPT) $(LIBCXXBRIDGE) $(LIBZCASH) $(LIBBITCOIN_UTIL) $(LIBBITCOIN_COMMON) $(LIBRUSTZCASH) $(LIBBITCOIN_CRYPTO) $(LIBSECP256K1) -Wl,--end-group -lbcrypt -Wl,--allow-multiple-definition
+junocash_cli_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) -Wl,--start-group $(LIBBITCOIN_CONSENSUS) $(LIBBITCOIN_SCRIPT) $(LIBCXXBRIDGE) $(LIBZCASH) $(LIBBITCOIN_UTIL) $(LIBBITCOIN_COMMON) $(LIBRUSTZCASH) $(LIBBITCOIN_CRYPTO) $(LIBSECP256K1) -Wl,--end-group $(LIBBCRYPT) -Wl,--allow-multiple-definition
 #
 
 # zcash-tx binary #
@@ -819,7 +825,7 @@ junocash_tx_LDADD = \
   $(LIBUNIVALUE) \
   $(LIBZCASH_LIBS)
 
-junocash_tx_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) -Wl,--start-group $(LIBBITCOIN_COMMON) $(LIBBITCOIN_CONSENSUS) $(LIBBITCOIN_SCRIPT) $(LIBCXXBRIDGE) $(LIBZCASH) $(LIBBITCOIN_UTIL) $(LIBRUSTZCASH) $(LIBBITCOIN_CRYPTO) $(LIBSECP256K1) -Wl,--end-group -lbcrypt -Wl,--allow-multiple-definition
+junocash_tx_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) -Wl,--start-group $(LIBBITCOIN_COMMON) $(LIBBITCOIN_CONSENSUS) $(LIBBITCOIN_SCRIPT) $(LIBCXXBRIDGE) $(LIBZCASH) $(LIBBITCOIN_UTIL) $(LIBRUSTZCASH) $(LIBBITCOIN_CRYPTO) $(LIBSECP256K1) -Wl,--end-group $(LIBBCRYPT) -Wl,--allow-multiple-definition
 
 junocash_tx_LDADD += $(BOOST_LIBS)
 #
