--- a/depends/config.site.in
+++ b/depends/config.site.in
@@ -38,13 +38,16 @@ export PKG_CONFIG_LIBDIR=$depends_prefix/lib/pkgconfig
 export PKG_CONFIG_PATH=$depends_prefix/share/pkgconfig
 
 CPPFLAGS="-I$depends_prefix/include/ $CPPFLAGS"
+LDFLAGS="-L$depends_prefix/lib $LDFLAGS"
 
 if test x@host_os@ = xfreebsd; then
-  LDFLAGS="-L$depends_prefix/lib $LDFLAGS -static-libstdc++ -lcxxrt"
+  LDFLAGS="$LDFLAGS -static-libstdc++"
+  LIBS="-lcxxrt $LIBS"
 elif test x@host_os@ = xmingw32; then
-  LDFLAGS="-L$depends_prefix/lib $LDFLAGS -lc++ -lc++abi -lunwind -lpthread"
+  LIBS="-lc++ -lc++abi -lunwind -lpthread $LIBS"
 else
-  LDFLAGS="-L$depends_prefix/lib $LDFLAGS -static-libstdc++ -lc++abi"
+  LDFLAGS="$LDFLAGS -static-libstdc++"
+  LIBS="-lc++abi $LIBS"
 fi
 
 CC="@CC@"
